--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Experience from '../components/Experience.astro'
 import Projects from '../components/Projects.astro';
 import Footer from '../components/Footer.astro';
 import About from '../components/About.astro';
+import Study from '../components/Study.astro';
 ---
 
 <Layout title="I'm Angel">
@@ -17,6 +18,7 @@ import About from '../components/About.astro';
 		<SocialMedias />
 		<About />
 		<Skills />
+		<Study />
 		<Experience />
 		<Projects />
 		<Footer />
