Navbar was redesigned

--- a/src/components/CardProfile.astro
+++ b/src/components/CardProfile.astro
@@ -3,7 +3,7 @@ import Me from "../assets/profile.jpeg";
 import Image from "astro/components/Image.astro";
 ---
 
-<article class="w-auto flex flex-col justify-center items-center gap-4 reveal">
+<article class="w-auto flex flex-col mt-16 justify-center items-center gap-4 reveal">
   <div class="flex gap-2 justify-center items-center w-[450px]">
     <Image
       src={Me}
