--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Projects from '../components/Projects.astro';
 import Footer from '../components/Footer.astro';
 import About from '../components/About.astro';
 import Study from '../components/Study.astro';
+import CallAction from '../components/CallAction.astro';
 ---
 
 <Layout title="I'm Angel">
@@ -21,6 +22,7 @@ import Study from '../components/Study.astro';
 		<Study />
 		<Experience />
 		<Projects />
+		<CallAction />
 		<Footer />
 	</main>
 </Layout>
