--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import photo from "../assets/new-photo.png";
-import Icon from "./Icon.astro";
+import photo from "../assets/me.jpg";
 import LinkButton from "./LinkButton.astro";
 
 const birthDate = new Date("2003-11-11");
