Text spanish to english

--- a/src/components/Study.astro
+++ b/src/components/Study.astro
@@ -11,7 +11,7 @@ const studies = [
     grade: "Técnico Superior en Informática",
     school: "UTECO (Universidad Tecnologíca del Cibao Oriental)",
     isFinished: true,
-    caption: "Grado completado con enfoque en programación y soporte técnico.",
+    caption: "Degree completed with a focus on programming and technical support.",
   },
   {
     grade: "Técnico en mantenimiento de sistemas informaticos",
@@ -27,7 +27,7 @@ const studies = [
     class="text-2xl font-extrabold text-white uppercase flex justify-center items-center gap-3 reveal"
   >
 
-    <span>Educación</span>
+    <span>Education</span>
   </h2>
 
   <div class="relative mt-5 px-4">
@@ -52,7 +52,7 @@ const studies = [
                 ) : (
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-4"><path fill-rule="evenodd" d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm.75-13a.75.75 0 0 0-1.5 0v5c0 .414.336.75.75.75h4a.75.75 0 0 0 0-1.5h-3.25V5Z" clip-rule="evenodd"></path></svg>
                 )}
-                <span>{study.isFinished ? "Finalizado" : "En curso"}</span>
+                <span>{study.isFinished ? "Finished" : "In progress"}</span>
               </div>
             </div>
           </div>
